--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,15 @@
     </h3>
 
     <ul>
+      <li><a href="/async_await.html">Async/Await</a></li>
+      <li><a href="/class.html">Class</a></li>
       <li><a href="/destructuring.html">Destructuring</a></li>
+      <li><a href="/generator.html">Generator</a></li>
+      <li><a href="/promises.html">Promises</a></li>
       <li><a href="/reduce.html">Reduce</a></li>
+      <li><a href="/spread_operator.html">Spread Operator</a></li>
     </ul>
   </div>
+
 </body>
 </html>
